--- a/project/web gedeelte/StyleSheet.css
+++ b/project/web gedeelte/StyleSheet.css
@@ -31,8 +31,8 @@ footer {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
-    height: 34px;
+    width: 40px;
+    height: 20px;
 }
 
     .switch input {
@@ -56,10 +56,10 @@ footer {
     .slider:before {
         position: absolute;
         content: "";
-        height: 26px;
-        width: 26px;
-        left: 4px;
-        bottom: 4px;
+        height: 16px;
+        width: 16px;
+        left: 2px;
+        bottom: 2px;
         background-color: white;
         -webkit-transition: .4s;
         transition: .4s;
@@ -74,16 +74,26 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(20px);
+    -ms-transform: translateX(20px);
+    transform: translateX(20px);
 }
 
 /* Rounded sliders */
 .slider.round {
-    border-radius: 34px;
+    border-radius: 10px;
 }
 
-    .slider.round:before {
-        border-radius: 50%;
-    }
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.logo {
+    width: 50px;
+    height: auto;
+    border-radius: 10%;
+}
+
+.navbar-brand {
+    padding:0;
+}
