--- a/project/web gedeelte/Site.Master
+++ b/project/web gedeelte/Site.Master
@@ -4,6 +4,11 @@
 
 <html lang="en">
 <head runat="server">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+</style>
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%: Page.Title %> - My ASP.NET Application</title>
@@ -17,6 +22,7 @@
 
 </head>
 <body>
+
     <form runat="server">
         <asp:ScriptManager runat="server">
             <Scripts>
@@ -66,7 +72,7 @@
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <footer class="navbar-fixed-bottom">
-                <p>&copy; <%: DateTime.Now.Year %> - dahouse</p>
+                <p>&nbsp;&nbsp;&nbsp;&nbsp; &copy; <%: DateTime.Now.Year %> - dahouse</p>
             </footer>
         </div>
 
